ÑисправлеÐустранение ожибки An accessor cannot be declared in an ambient context. понизил версию плагина swiper

--- a/src/app/page/list/list.component.html
+++ b/src/app/page/list/list.component.html
@@ -1,5 +1,5 @@
 <app-pagination [count]="3"></app-pagination>
-<!--<app-popular-movies></app-popular-movies>-->
+<app-popular-movies></app-popular-movies>
 <div class="films-block"></div>
 <h1>Фильмы</h1>
 <div class="filter">
