--- a/src/app/page/movies/movies.component.scss
+++ b/src/app/page/movies/movies.component.scss
@@ -1,6 +1,6 @@
 .content {
   display: flex;
-  height: 100vh;
+  padding: 10px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -15,6 +15,7 @@
   background: rgba(#000, 0.3);
   color: rgba(41, 41, 41, 0.69);
   padding: 5px 20px;
+  margin-bottom: 10px;
 }
 .movies {
   display: flex;
