--- a/src/app/page/movies/movies.component.html
+++ b/src/app/page/movies/movies.component.html
@@ -2,7 +2,7 @@
   <a class="back-link" href="javascript:void(0)" (click)="location.back()">Назад</a>
   <a class="back-link" routerLink="/list">К фильмам</a>
   <div class="movies" *ngIf="movies">
-    <img class="movies__img" [src]="'https://image.tmdb.org/t/p/w500/' + movies.poster_path" alt="">
+    <img class="movies__img" [src]="'https://image.tmdb.org/t/p/w500/' + movies.poster_path">
     <div class="movies__block-options">
       <div class="movies__desc"><span class="movies__option">id</span>{{movies.id}}</div>
       <div class="movies__desc"><span class="movies__option">Название</span>{{movies.title}}</div>
@@ -13,11 +13,8 @@
       <div class="movies__desc"><span class="movies__option">Продолжительность</span>{{movies.runtime}}</div>
       <div class="movies__desc"><span class="movies__option">Бюджет</span>{{movies.budget}}</div>
       <div class="movies__desc"><span class="movies__option">Рекомендованные</span>{{movies.budget}}</div>
-    <button class="button" [ngClass]="favorites ? 'button--favorites' : ''" (click)="setFavorites(movies.id)">{{favorites ? 'Уже в избранном': 'Добавить в избранное'}}</button>
+      <button class="button" [ngClass]="favorites ? 'button--favorites' : ''" (click)="setFavorites(movies.id)">{{favorites ? 'Уже в избранном': 'Добавить в избранное'}}</button>
     </div>
-
-
-
   </div>
 </div>
 <app-swiper-movies title="Рекомендованные фильмы" [data]="recommendations"></app-swiper-movies>
